docs(readme): ddd instructions and tweak config to make it simpler

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "npm": "6.13.4"
   },
   "scripts": {
-    "preinstall": "echo 'generate .npmrc file here'",
-    "postinstall": "npm run config",
-    "start": "source .env && npm run config && ionic cordova emulate ios -lc --emulator --target=${IPHONE8_P_ID}",
+    "prestart": "source .env && npm run config",
+    "start": "ionic cordova emulate ios -lc --emulator --target=${IPHONE8_P_ID}",
     "clean": "ionic-app-scripts clean",
     "lint": "ionic-app-scripts lint",
     "format": "prettier --write ./src/**/*.{html,scss,ts,json}",
@@ -20,16 +19,18 @@
     "prepare:ios:remove": "rm -rf platforms/ plugins/ www",
     "prepare:ios:add": "ionic cordova platform add ios@5.0.0",
     "prepare:ios": "ionic cordova prepare ios",
+    "preemulate:web": "npm run config",
     "emulate:web": "ionic-app-scripts serve --nobrowser",
+    "preemulate:ios": "npm run config",
     "emulate:ios": "ionic cordova emulate ios -lc --emulator --target=${IPHONE8_P_ID}",
     "build:web": "ionic-app-scripts build",
     "build:ios": "ionic cordova build ios -- --buildFlag=\"-UseModernBuildSystem=0\"",
     "build:emulator": "ionic cordova build ios -- --buildFlag=\"-UseModernBuildSystem=0\" --emulator",
-    "build": "npm run config && npm run build:ios",
+    "prebuild": "source .env && npm run config",
+    "build": "npm run build:ios",
     "test:unit:watch": "karma start ./test-config/karma.conf.js --watch",
     "test:unit:coverage": "karma start ./test-config/karma.conf.js --coverage --single-run",
     "sonar-scanner": "npm run test:unit:coverage && sonar-scanner",
-    "sentry-wizard": "node_modules/.bin/sentry-wizard",
     "test:e2e": "npm run test:e2e:configure && npm run test:e2e:run",
     "test:e2e:run:": "protractor ./test-config/protractor.conf.js",
     "test:e2e:configure": "webdriver-manager update --standalone false --gecko false",
@@ -117,7 +118,6 @@
     "@ionic-enterprise/cordova": "^9.0.3",
     "@ionic/app-scripts": "3.2.4",
     "@ionic/cli": "^6.12.2",
-    "@sentry/wizard": "^1.1.4",
     "@types/debug": "^4.1.5",
     "@types/jasmine": "^2.5.41",
     "@types/node": "14.6.2",
