--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@ionic-native/call-number": "4.15.0",
     "@ionic-native/camera": "4.15.0",
     "@ionic-native/core": "4.20.0",
+    "@ionic-native/google-analytics": "4.20.0",
     "@ionic-native/http": "4.15.0",
     "@ionic-native/in-app-browser": "4.15.0",
     "@ionic-native/keyboard": "4.20.0",
@@ -81,6 +82,7 @@
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-exit": "^1.0.3",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-google-analytics": "^1.8.6",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "5.0.0",
     "cordova-plugin-network-information": "git+https://github.com/apache/cordova-plugin-network-information.git",
@@ -163,7 +165,6 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-screen-orientation": {},
-      "cordova-plugin-network-information": {},
       "cordova-plugin-secure-storage": {},
       "cordova-plugin-app-version": {},
       "cordova-plugin-exit": {},
@@ -174,7 +175,8 @@
       "sentry-cordova": {
         "SENTRY_ANDROID_SDK_VERSION": "1+"
       },
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "ios"
