--- a/package.json
+++ b/package.json
@@ -46,11 +46,12 @@
     "@angular/platform-server": "5.2.11",
     "@angular/router": "5.2.11",
     "@ionic-enterprise/auth": "^3.3.1",
-    "@ionic-enterprise/identity-vault": "^4.2.7",
+    "@ionic-enterprise/identity-vault": "4.2.7",
     "@ionic-native/app-version": "4.20.0",
     "@ionic-native/call-number": "4.15.0",
     "@ionic-native/camera": "4.15.0",
     "@ionic-native/core": "4.20.0",
+    "@ionic-native/google-analytics": "4.20.0",
     "@ionic-native/http": "4.15.0",
     "@ionic-native/in-app-browser": "4.15.0",
     "@ionic-native/keyboard": "4.20.0",
@@ -67,7 +68,7 @@
     "@ngrx/effects": "^5.2.0",
     "@ngrx/store": "^5.2.0",
     "@types/uuidv4": "^2.0.0",
-    "angular2-signaturepad": "^2.8.0",
+    "angular2-signaturepad": "2.8.0",
     "audit-filter": "^0.5.0",
     "await-to-js": "^2.1.1",
     "call-number": "^1.0.1",
@@ -81,7 +82,7 @@
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-exit": "^1.0.3",
     "cordova-plugin-file": "^6.0.2",
-    "cordova-plugin-inappbrowser": "git+https://github.com/apache/cordova-plugin-inappbrowser.git",
+    "cordova-plugin-google-analytics": "^1.8.6",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "5.0.0",
     "cordova-plugin-network-information": "git+https://github.com/apache/cordova-plugin-network-information.git",
@@ -154,7 +155,6 @@
         "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "This app requires photo library access to function properly.",
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
       },
-      "cordova-plugin-inappbrowser": {},
       "cordova-plugin-camera": {},
       "mx.ferreyra.callnumber": {},
       "cordova-sqlite-storage": {},
@@ -165,7 +165,6 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-screen-orientation": {},
-      "cordova-plugin-network-information": {},
       "cordova-plugin-secure-storage": {},
       "cordova-plugin-app-version": {},
       "cordova-plugin-exit": {},
@@ -176,7 +175,8 @@
       "sentry-cordova": {
         "SENTRY_ANDROID_SDK_VERSION": "1+"
       },
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "ios"
