--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@ionic-native/call-number": "^4.15.0",
     "@ionic-native/camera": "^4.15.0",
     "@ionic-native/core": "~4.12.0",
+    "@ionic-native/google-analytics": "^4.20.0",
     "@ionic-native/http": "^4.15.0",
     "@ionic-native/in-app-browser": "^4.15.0",
     "@ionic-native/keyboard": "^4.20.0",
@@ -85,6 +86,7 @@
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-exit": "^1.0.3",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-google-analytics": "^1.8.6",
     "cordova-plugin-inappbrowser": "git+https://github.com/apache/cordova-plugin-inappbrowser.git",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "5.0.0",
@@ -182,7 +184,8 @@
       "sentry-cordova": {
         "SENTRY_ANDROID_SDK_VERSION": "1+"
       },
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-google-analytics": {}
     },
     "platforms": [
       "ios"
