--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-exit": "^1.0.3",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-google-analytics": "^1.8.6",
     "cordova-plugin-inappbrowser": "git+https://github.com/apache/cordova-plugin-inappbrowser.git",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "5.0.0",
@@ -176,7 +177,8 @@
       "sentry-cordova": {
         "SENTRY_ANDROID_SDK_VERSION": "1+"
       },
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-google-analytics": {}
     },
     "platforms": [
       "ios"
