tweaks to app setup for the pipeline

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "npm": "6.13.4"
   },
   "scripts": {
-    "prestart": "source .env && npm run config",
-    "start": "ionic cordova emulate ios -lc --emulator --target=${IPHONE8_P_ID}",
+    "postinstall": "echo 'install finished... Running create config' && npm run config && echo 'config created!'",
+    "install-ci": "echo 'running install-ci' && npm ci && echo 'ci install-ci finished'",
+    "start": "ionic cordova emulate ios -lc --emulator",
     "clean": "ionic-app-scripts clean",
     "lint": "ionic-app-scripts lint",
     "format": "prettier --write ./src/**/*.{html,scss,ts,json}",
@@ -19,14 +20,11 @@
     "prepare:ios:remove": "rm -rf platforms/ plugins/ www",
     "prepare:ios:add": "ionic cordova platform add ios@5.0.0",
     "prepare:ios": "ionic cordova prepare ios",
-    "preemulate:web": "npm run config",
     "emulate:web": "ionic-app-scripts serve --nobrowser",
-    "preemulate:ios": "npm run config",
     "emulate:ios": "ionic cordova emulate ios -lc --emulator --target=${IPHONE8_P_ID}",
     "build:web": "ionic-app-scripts build",
     "build:ios": "ionic cordova build ios -- --buildFlag=\"-UseModernBuildSystem=0\"",
     "build:emulator": "ionic cordova build ios -- --buildFlag=\"-UseModernBuildSystem=0\" --emulator",
-    "prebuild": "source .env && npm run config",
     "build": "npm run build:ios",
     "test:unit:watch": "karma start ./test-config/karma.conf.js --watch",
     "test:unit:coverage": "karma start ./test-config/karma.conf.js --coverage --single-run",
