Add implementation to show modal dialog in offline scenario

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@ionic-native/call-number": "4.15.0",
     "@ionic-native/camera": "4.15.0",
     "@ionic-native/core": "4.20.0",
+    "@ionic-native/google-analytics": "4.20.0",
     "@ionic-native/http": "4.15.0",
     "@ionic-native/in-app-browser": "4.15.0",
     "@ionic-native/keyboard": "4.20.0",
