--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "test-watch": "karma start ./test-config/karma.conf.js --watch",
     "test-coverage": "karma start ./test-config/karma.conf.js --coverage",
     "sonar-scanner": "npm run test-coverage && sonar-scanner",
-    "sentry-wizard": "node_modules/.bin/sentry-wizard",
     "e2e": "npm run e2e-update && npm run e2e-test",
     "e2e-test": "protractor ./test-config/protractor.conf.js",
     "e2e-update": "webdriver-manager update --standalone false --gecko false",
@@ -34,17 +33,16 @@
     "ionic_generate_source_map": "true"
   },
   "dependencies": {
-    "@angular/animations": "^5.2.11",
-    "@angular/common": "^5.2.11",
-    "@angular/compiler": "^5.2.11",
+    "@angular/animations": "5.2.11",
+    "@angular/common": "5.2.11",
+    "@angular/compiler": "5.2.11",
     "@angular/compiler-cli": "^9.0.6",
-    "@angular/core": "^5.2.11",
-    "@angular/forms": "^5.2.11",
-    "@angular/http": "^5.2.11",
-    "@angular/platform-browser": "^5.2.11",
-    "@angular/platform-browser-dynamic": "^5.2.11",
-    "@angular/platform-server": "^5.2.11",
-    "@angular/router": "^5.2.11",
+    "@angular/core": "5.2.11",
+    "@angular/forms": "5.2.11",
+    "@angular/platform-browser": "5.2.11",
+    "@angular/platform-browser-dynamic": "5.2.11",
+    "@angular/platform-server": "5.2.11",
+    "@angular/router": "5.2.11",
     "@ionic-native/app-version": "^4.20.0",
     "@ionic-native/call-number": "^4.15.0",
     "@ionic-native/camera": "^4.15.0",
@@ -92,6 +90,7 @@
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-plugin-x-socialsharing": "^5.6.8",
     "cordova-sqlite-storage": "^2.6.0",
+    "core-js": "^2.5.7",
     "es6-promise-plugin": "^4.2.2",
     "fs-extra": "^9.0.1",
     "ionic-angular": "^3.9.2",
@@ -103,16 +102,16 @@
     "sentry-cordova": "^0.17.0",
     "sw-toolbox": "3.6.0",
     "uuid": "^3.3.2",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.29"
   },
   "devDependencies": {
     "@angular/cli": "^6.2.9",
-    "@commitlint/cli": "^9.1.1",
-    "@commitlint/config-conventional": "^9.1.1",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@ionic/app-scripts": "^3.2.4",
-    "@sentry/wizard": "^1.1.4",
     "@types/debug": "^4.1.5",
     "@types/jasmine": "^2.5.41",
+    "@types/node": "14.6.2",
     "angular2-template-loader": "^0.6.2",
     "cordova": "^8.1.2",
     "cordova-wheel-selector-plugin": "^1.1.1",
@@ -121,9 +120,9 @@
     "ionic": "^5.2.3",
     "ionic-mocks": "^1.3.0",
     "istanbul-instrumenter-loader": "^3.0.1",
-    "jasmine": "^2.5.3",
+    "jasmine": "^2.7.0",
     "jasmine-spec-reporter": "^4.1.0",
-    "karma": "^4.4.1",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "^1.1.0",
@@ -136,10 +135,9 @@
     "native-run": "^0.2.9",
     "null-loader": "^0.1.1",
     "prettier": "^1.19.1",
-    "protractor": "^5.4.2",
     "ts-loader": "^3.0.3",
     "ts-node": "^8.10.2",
-    "typescript": "^2.9.2"
+    "typescript": "4.0.5"
   },
   "description": "An Ionic project",
   "cordova": {
