--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@ionic/storage": "2.2.0",
     "@ngrx/effects": "^5.2.0",
     "@ngrx/store": "^5.2.0",
+    "@sentry/tracing": "^6.11.0",
     "@types/uuidv4": "^2.0.0",
     "angular2-signaturepad": "2.8.0",
     "audit-filter": "^0.5.0",
@@ -102,7 +103,7 @@
     "mx.ferreyra.callnumber": "0.0.2",
     "phonegap-plugin-mobile-accessibility": "^1.0.5",
     "rxjs": "^5.5.12",
-    "sentry-cordova": "^0.17.0",
+    "sentry-cordova": "^1.0.0",
     "sw-toolbox": "3.6.0",
     "uuid": "^3.3.2",
     "zone.js": "0.11.4"
