feat(19557): update .npmrc to only validate prod deps by default and audit fix

--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
 audit-level = high
-audit = false
+audit = true
 @ionic-enterprise:registry=https://registry.ionicframework.com/
 //registry.ionicframework.com/:_authToken=${IONIC_HUB_PRODUCT_KEY}
