--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "npm": "6.13.4"
   },
   "scripts": {
-    "postinstall": "echo 'install finished... Running create config' && npm run config && echo 'config created!'",
+    "postinstall": "npm run vulnerability-count && echo 'install finished... Running create config' && npm run config && echo 'config created!'",
     "install-ci": "echo 'running install-ci' && npm ci && echo 'ci install-ci finished'",
     "start": "ionic cordova emulate ios -lc --emulator",
     "clean": "ionic-app-scripts clean",
     "lint": "ionic-app-scripts lint",
     "format": "prettier --write ./src/**/*.{html,scss,ts,json}",
+    "vulnerability-count": "scripts/check-vulns.sh",
     "config": "ts-node ./scripts/create-configs.ts",
     "security-checks": "git-secrets --scan && git log -p | scanrepo",
     "prepare:ios:remove": "rm -rf platforms/ plugins/ www",
